src/components/sections/myProjects/index.css
#projects-section {
  min-height: calc(100vh - var(--header-height));
  position: relative;

  padding-top: 2rem;
  padding-bottom: 2rem;
  justify-content: flex-start;
  gap: 2rem 0;
  scroll-margin-top: 60px;
}

/* GRID DOS PROJETOS */
.projects_grid {
  display: grid;
  grid-template-columns: repeat(3, minmax(300px, 1fr));
  gap: 24px;
}

/* TÍTULO DA SEÇÃO */
.my_projects_main_title {
  font-family: var(--font-sn-pro), sans-serif;
  color: #333;
}

/* BOX DOS PROJETOS */
.project_box {
  position: relative;
  max-width: 400px;
  min-height: 300px;

  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: justify;
  gap: 1rem;

  background-color: #fff;
  border-radius: 1rem;
  padding: 1.5rem 2rem;
  box-shadow: 0px 4px 8px gray;
  font-family: var(--font-sn-pro), sans-serif;
}

/* NOME DO PROJETO */
.project_name {
  color: #333;
  align-self: flex-start;
  text-decoration: underline 2px dashed #b8b8b9;
}

/* DETALHES DO PROJETO */
.project_details {
  list-style: none;
}

/* BOTÃO DE IR PARA O REPOSITÓRIO */
.goto_repository {
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translate(-50%);

  background-color: rgba(255, 255, 255, 0.1);
  box-shadow: 0px 2px 6px gray;
  outline: none;
  border: none;
  border-radius: 1rem;
  padding: 0.75rem;
  transition: 200ms ease-in-out;
  cursor: pointer;
}
.goto_repository:hover,
.goto_repository:focus {
  transform: translateX(-50%) translateY(-2px);
  background-color: gainsboro;
  box-shadow: 0px 2px 6px #333;
}

/* CONTAINER DOS BOTÕES */
.load_more_container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

/* BOTÃO DE CARREGAR MAIS PROJETOS */
.load_more_button {
  height: 40px;

  background-color: #fff;
  box-shadow: 0px 2px 6px gray;
  outline: none;
  border: none;
  border-radius: 1rem;
  padding: 0.75rem;
  transition: 200ms ease-in-out;
  cursor: pointer;
}

/* BOTÃO PARA RETIRAR PROJETOS CARREGADOS */
.collapse_projects_button {
  width: 40px;
  height: 40px;

  display: flex;
  align-items: center;
  justify-content: center;

  background-color: #fff;
  box-shadow: 0px 2px 6px gray;
  padding: 0.75rem;
  outline: none;
  border: none;
  border-radius: 50%;
  font-size: 1rem;
  text-align: center;

  transition: 200ms ease-in-out;
  cursor: pointer;
}

/* ANIMAÇÃO DE HOVER DOS BOTÕES */
.collapse_projects_button:hover,
.collapse_projects_button:focus,
.load_more_button:hover,
.load_more_button:focus {
  transform: translateY(-2px);
  background-color: gainsboro;
  box-shadow: 0px 4px 6px #333;
}

